// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalActions Component allows external props to be added 1`] = `
<WithStyles(DialogActions)
  className=""
  classes={
    Object {
      "action": undefined,
      "root": undefined,
    }
  }
  disableActionSpacing={true}
>
  Modal Content
</WithStyles(DialogActions)>
`;

exports[`ModalActions Component allows external styles to be added 1`] = `
<WithStyles(DialogActions)
  className=""
  classes={
    Object {
      "action": "testClassAction",
      "root": "testClassRoot",
    }
  }
>
  Modal Content
</WithStyles(DialogActions)>
`;

exports[`ModalActions Component should render correctly if opened 1`] = `
<WithStyles(DialogActions)
  className=""
  classes={
    Object {
      "action": undefined,
      "root": undefined,
    }
  }
>
  Modal Content
</WithStyles(DialogActions)>
`;

exports[`ModalActions withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(ModalActions)>
      Modal Content
    </WithStyles(ModalActions)>
  </HvProvider>
</JssProvider>
`;
